--- a/index.html
+++ b/index.html
@@ -1,9 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<title>Mrs Q</title>
+	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<script type="text/javascript" src="javascript/index.js"></script>
 </head>
 <body>
-21312414
+	<header>
+		<div class="top">
+			<h1>Mrs Q</h1>
+			<a>收藏</a>
+		</div>
+	</header>
+	<div class="wrapper">
+		<div class="book">
+			<div class="left">
+				<div class="page1"></div>
+			</div>
+			<div class="right">
+				<div class="page2"></div>
+			</div>
+		</div>
+		<div class="tags">
+			<ul>
+				<li><a href="">简介</a></li>
+				<li><a href="">随笔</a></li>
+				<li><a href="">作品</a></li>
+				<li><a href="">笔记</a></li>
+				<li><a href="">转载</a></li>
+			</ul>
+		</div>
+	</div>
 </body>
 </html>
