--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Mrs Q</title>
 	<link rel="stylesheet" href="index.css">
-	<link rel="stylesheet" type="text/css" href="normalize.css">
+	<link rel="stylesheet" type="text/css" href="./normalize.css">
 	<script type="text/javascript" src="javascript/index.js"></script>
 </head>
 <body>
