--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Mrs Q</title>
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="./index.css">
 	<link rel="stylesheet" type="text/css" href="./normalize.css">
 	<script type="text/javascript" src="javascript/index.js"></script>
 </head>
@@ -16,11 +16,14 @@
 	</header>
 	<div class="wrapper">
 		<div class="book">
-			<div class="left">
-				<div class="page1"></div>
+			<div class="left-m left">
+				<div class="page1  left page">111111111111</div>
+				<div class="page3 left page now"></div>
+				<div class="page5 left page"></div>
 			</div>
-			<div class="right">
-				<div class="page2"></div>
+			<div class="right-m right">
+				<div class="page2 right page"></div>
+				<div class="page4 right page now"></div>
 			</div>
 		</div>
 		<div class="tags">
