--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 		<div class="book">
 			<div class="left-m left">
 				<div class="page1  left page">111111111111</div>
-				<div class="page3 left page now"></div>
-				<div class="page5 left page"></div>
+				<div class="page3 left page now">333333</div>
+				<div class="page5 left page">5555555555</div>
 			</div>
 			<div class="right-m right">
-				<div class="page2 right page"></div>
-				<div class="page4 right page now"></div>
+				<div class="page2 right page">2222222</div>
+				<div class="page4 right page now">4444444</div>
+				<div class="page6 right page">66666666</div>
 			</div>
 		</div>
 		<div class="tags">
