--- a/index.html
+++ b/index.html
@@ -17,23 +17,25 @@
 	<div class="wrapper">
 		<div class="book">
 			<div class="left-m left">
-				<div class="page1  left page">111111111111</div>
-				<div class="page3 left page now">333333</div>
+				<div class="page1  left page now">111111111111</div>
+				<div class="page3 left page">333333</div>
 				<div class="page5 left page">5555555555</div>
+				<div class="page7 left page">777777777777</div>
 			</div>
 			<div class="right-m right">
-				<div class="page2 right page">2222222</div>
-				<div class="page4 right page now">4444444</div>
+				<div class="page2 right page now">2222222</div>
+				<div class="page4 right page">4444444</div>
 				<div class="page6 right page">66666666</div>
+				<div class="page8 right page">8888888888</div>
 			</div>
 		</div>
 		<div class="tags">
 			<ul>
-				<li><a href="">简介</a></li>
-				<li><a href="">随笔</a></li>
-				<li><a href="">作品</a></li>
-				<li><a href="">笔记</a></li>
-				<li><a href="">转载</a></li>
+				<li id="page1">简介</li>
+				<li id="page2">作品</li>
+				<li id="page3">随笔</li>
+				<li id="page5">笔记</li>
+				<li id="page7">转载</li>
 			</ul>
 		</div>
 	</div>
