基本功能完成

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 	<div class="wrapper">
 		<div class="book">
 			<div class="left-m left">
-				<div class="page1  left page now">111111111111</div>
-				<div class="page3 left page">333333</div>
-				<div class="page5 left page">5555555555</div>
-				<div class="page7 left page">777777777777</div>
+				<div class="page1  left page now"><h1>1111111111111</h1></div>
+				<div class="page3 left page"><h1>3333333333</h1></div>
+				<div class="page5 left page"><h1>555555555555</h1></div>
+				<div class="page7 left page"><h1>777777777</h1></div>
 			</div>
 			<div class="right-m right">
-				<div class="page2 right page now">2222222</div>
-				<div class="page4 right page">4444444</div>
-				<div class="page6 right page">66666666</div>
-				<div class="page8 right page">8888888888</div>
+				<div class="page2 right page now"><h1>2222222222</h1></div>
+				<div class="page4 right page"><h1>44444444</h1></div>
+				<div class="page6 right page"><h1>666666666</h1></div>
+				<div class="page8 right page"><h1>888888888</h1></div>
 			</div>
 		</div>
 		<div class="tags">
